{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 5,
  "lineage": "d2464b89-3066-5ae5-0d1e-a4f365bbea7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group/sg-0d0e3b8ec0555531a",
            "description": "Learning Experience",
            "egress": [],
            "id": "sg-0d0e3b8ec0555531a",
            "ingress": [],
            "name": "Terraform-SG",
            "name_prefix": "",
            "owner_id": "183295411943",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Terraform-Security-Group"
            },
            "tags_all": {
              "name": "Terraform-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04658d0b7493013f0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-0e7d9d9392979993a",
            "cidr_ipv4": "10.8.8.6/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0e7d9d9392979993a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e3b8ec0555531a",
            "security_group_rule_id": "sgr-0e7d9d9392979993a",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-SG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-0b8836fefeb1fbfa9",
            "cidr_ipv4": "10.8.8.6/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0b8836fefeb1fbfa9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e3b8ec0555531a",
            "security_group_rule_id": "sgr-0b8836fefeb1fbfa9",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-SG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-08b95c8b7ab71f9d8",
            "cidr_ipv4": "10.8.8.6/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08b95c8b7ab71f9d8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e3b8ec0555531a",
            "security_group_rule_id": "sgr-08b95c8b7ab71f9d8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-SG"
          ]
        }
      ]
    }
  ]
}